2006-03-14  Eric Anholt  <anholt@FreeBSD.org>

	* GL/mesa/array_cache/Makefile.am:
	* GL/mesa/glapi/Makefile.am:
	* GL/mesa/main/Makefile.am:
	* GL/mesa/math/Makefile.am:
	* GL/mesa/shader/Makefile.am:
	* GL/mesa/shader/grammar/Makefile.am:
	* GL/mesa/shader/slang/Makefile.am:
	* GL/mesa/swrast/Makefile.am:
	* GL/mesa/swrast_setup/Makefile.am:
	* GL/mesa/tnl/Makefile.am:
	* configure.ac:
	* include/dix-config.h.in:
	Merge from HEAD:
	Define NO_LIBCWRAPPER in dix-config.h, and rely on Mesa including
	dix-config.h if DIX_HAVE_CONFIG_H is defined to get it and _XSERVER64.

2006-02-28  Adam Jackson  <ajax@freedesktop.org>

	* XpConfig/C/print/models/CANONC3200-PS/fonts/Makefile.am:
	* XpConfig/C/print/models/HPLJ4050-PS/fonts/Makefile.am:
	* XpConfig/C/print/models/SPSPARC2/fonts/Makefile.am:
	Bug #5627: Fix Xprint font symlinking. (Tilman Sauerbeck)

	* randr/Makefile.am:
	Sync with head, install randrstr.h in the SDK.

	* xkb/maprules.c:
	Bug #5216: Allow options to appear with other components.

	* hw/xfree86/common/xf86PciInfo.h:
	Resync with head.

2006-02-15  Eric Anholt  <anholt@FreeBSD.org>

	* include/dix-config.h.in:
	Merge from HEAD:
	Add #undef BSD44SOCKETS, without which the listener socket on FreeBSD
	would be created without the port number due to xtrans's define not
	being used when xtrans was compiled in the X Server.

2006-02-15  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Merge from HEAD:
	Fix the AC_TRY_RUN for sys/linker.h which had no hope due to lacking a
	main() to instead use a nice AC_CHECK_HEADERS that works.  Also, fix
	the nearby SYSV IPC check which was lacking an argument and giving
	bogus results (it's "AC_TRY_LINK(includes, main, yes, no)").

2006-02-15  Eric Anholt  <anholt@FreeBSD.org>

	* render/picture.c: (premultiply):
	Merge from HEAD:
	Correct rounding in divide-by-255 code.

2006-02-14  Adam Jackson  <ajax@freedesktop.org>

	* include/xorg-config.h.in: